# cmake_demo

./: .gitignore  CMakeLists.txt
ext/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mymath.c  mymath.h  utils.h
src/: main.c
